test/expected/explain_frg_v.out
explain void f(register i)
               ^
16: error: void as parameter can not have a name
